<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardMaxElevation="2dp"
    app:contentPadding="4dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_personal_data_title"
                android:textAlignment="center"
                android:textSize="24sp" />

            <View
                android:id="@+id/line0"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="4dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:importantForAutofill="no"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_personal_data_first_name"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:importantForAutofill="no"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_personal_data_last_name"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:importantForAutofill="no"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_personal_data_phone_number"
                android:inputType="phone"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>