<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="3dp"
    app:cardMaxElevation="2dp"
    app:contentPadding="4dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_loan_title"
                android:textAlignment="center"
                android:textSize="24sp" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="4dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/loan_conditions_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp"
                tools:text="@string/dialog_loan_conditions_info" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="4dp"
                android:background="@android:color/darker_gray" />

            <EditText
                android:id="@+id/loan_amount"
                android:layout_width="match_parent"
                android:importantForAutofill="no"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_loan_amount"
                android:inputType="number"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.cardview.widget.CardView>